# 2Dto3D

./: .dockerignore  .gitignore  Dockerfile  app.py  generate_mockups.py  pyproject.toml  requirements.txt  sketch2stl.py
frontend/: capacitor.config.ts  index.html  package-lock.json  package.json
frontend/js/: converter.js
templates/: index.html
